[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/src/Levels/Ending2.gd" type="Script" id=1]
[ext_resource path="res://game/src/Enemies/Bat/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/src/NPC/aux_nodes/Dialogue.tscn" type="PackedScene" id=3]

[node name="Ending2" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" parent="." instance=ExtResource( 3 )]

[node name="PopupDialog" parent="CanvasLayer" index="0"]
visible = true

[node name="ColorRect" parent="CanvasLayer/PopupDialog" index="0"]
margin_left = -17.0
margin_top = -124.0
margin_right = 310.0
margin_bottom = 61.0

[node name="NPCName" parent="CanvasLayer/PopupDialog/ColorRect" index="0"]
text = "
"

[node name="Dialogue" parent="CanvasLayer/PopupDialog/ColorRect" index="1"]
margin_right = 324.0
margin_bottom = 156.0

[node name="ContinueDialogue" parent="CanvasLayer/PopupDialog/ColorRect" index="2"]
margin_left = 205.079
margin_top = 164.548
margin_right = 321.079
margin_bottom = 178.548

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]

[editable path="CanvasLayer"]
[editable path="PlayerDetectionZone"]
